# matrix-webhook-thing

./: Cargo.toml  Dockerfile  config.toml  docker-compose.yml
.github/workflows/: deploy.yml
src/: main.rs
