[package]
name = "matrix-webhook-thing"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.29"
matrix-sdk = "0.16.0"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.48.0"
toml = "0.9.10"
